docs: 更新运行命令，添加 Java 11 模块系统兼容性参数
Flink 的 Kryo/Chill 序列化器在 Java 11+ 上运行时需要 --add-opens 参数
来解决模块系统的反射访问限制问题。

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>