@@ -17,10 +17,12 @@ mvn clean package
 
 # 运行 ETL 任务
 # 方式一：从文件加载配置（推荐）
-java -jar flink-etl-client/target/flink-etl-client-1.0.0-SNAPSHOT.jar --file docs/examples/mysql-to-console.json
+java --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED -jar flink-etl-client/target/flink-etl-client-1.0.0-SNAPSHOT.jar --file docs/examples/mysql-to-console.json
 
 # 方式二：从 JSON 字符串加载配置
-java -jar flink-etl-client/target/flink-etl-client-1.0.0-SNAPSHOT.jar --config '{"job":{...},"source":{...},"sink":{...}}'
+java --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED -jar flink-etl-client/target/flink-etl-client-1.0.0-SNAPSHOT.jar --config '{"job":{...},"source":{...},"sink":{...}}'
+
+# 注意：Java 11+ 运行时需要 --add-opens 参数，解决 Flink Kryo 序列化器与模块系统的兼容性问题
 
 # 安装到本地仓库（开发新插件时需要）
 mvn clean install -DskipTests
